Closed Bug 1337109 Opened 8 years ago Closed 8 years ago

Fix some minor places where a single context/zone group per runtime is assumed

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
This patch fixes the remaining places (after the previous patches depending on bug 1323066) where a single context or zone group per runtime is assumed, excepting a couple places that will need API tweaks to fix. All of these can be handled with simple changes.
Attachment #8834101 - Flags: review?(jdemooij)
Blocks: 1337117
Attachment #8834101 - Flags: review?(jdemooij) → review+
Pushed by bhackett@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/14b73f92fba9 Fix some minor places where a single context/zone group per runtime is assumed, r=jandem.
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: