Bug 1337109 - Fix some minor places where a single context/zone group per runtime is assumed, r=jandem.

--HG--
extra : rebase_source : c96783b8daf63e01c017f9a6ae721600c2917e6b